apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  ports:
  - name: prowlarr
    port: 9696
    protocol: TCP
    targetPort: 9696
  selector:
    app: prowlarr
