apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    #traefik.ingress.kubernetes.io/router.middlewares: http-to-https-redirect-media@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: prowlarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prowlarr.lab.emc2.build
    secretName: prowlarr-letsencrypt-tls
  rules:
  - host: prowlarr.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 9696
        path: /
        pathType: Prefix
